Bug 330964 - Add rowspacing/columnspacing/framespacing to MathML mtable. r=fredw
UltraBlame original commit: b662e2341b4ac7cd67d92eafeada4b85570a9fc2

--- a/layout/mathml/mathml.css
+++ b/layout/mathml/mathml.css
@@ -157,7 +157,6 @@ mlabeledtr > mtd:first-child {
 
 
 
-
 mtd {
   padding-right: 0.4em;  
   padding-left: 0.4em;   
@@ -193,6 +192,13 @@ mtable[frame="dashed"] > mtr > mtd:first-child {
 mtable[frame="solid"] > mtr > mtd:last-child,
 mtable[frame="dashed"] > mtr > mtd:last-child {
   -moz-padding-end: 0.4em; 
+}
+
+mtable[rowspacing] > mtr > mtd,
+mtable[columnspacing] > mtr > mtd,
+mtable[framespacing] > mtr > mtd {
+  
+  padding: 0px;
 }
 
 
